--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -10,6 +10,9 @@
     "DefaultConnection": "Data Source=SteveJobs\\SQLEXPRESS;Initial Catalog=finshark;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "PostgresqlConnection": "Host=localhost;Username=postgres;Password=JFK_jfk27;Database=finshark"
   },
+  // https://site.financialmodelingprep.com/
+  // The token that you need for retrieve info in the link above
+  "FMPKey": "Your Secret Key",
   "JWT": {
     "Issuer": "https://localhost:7277",
     "Audience": "https://localhost:7277",
